qtty-core/tests/fixtures/qtty_derive/missing_unit_attribute.rs
#[derive(Clone, Copy, Debug, PartialEq, PartialOrd, qtty_derive::Unit)]
pub struct MissingUnitAttribute;

fn main() {}
